# CLI-spec-kit-

./: .gitignore  CHECKLIST.md  CLARIFY.md  CONSTITUTION.md  LEARNING_GIT.md  PLAN.md  SPECIFY.md  TASKS.md  pyproject.toml
examples/e2e-mini/: README.md  SCENARIO.md  WALKTHROUGH.md
scripts/powershell/: check-prerequisites.ps1  create-new-feature.ps1  setup-plan.ps1  setup-tasks.ps1
skills/hyspec-analyze/: SKILL.md
skills/hyspec-checklist/: SKILL.md
skills/hyspec-clarify/: SKILL.md
skills/hyspec-constitution/: SKILL.md
skills/hyspec-implement/: SKILL.md
skills/hyspec-plan/: SKILL.md
skills/hyspec-specify/: SKILL.md
skills/hyspec-tasks/: SKILL.md
src/hyspec_cli/: __init__.py  _feature.py  _init.py  _kit.py  _sdd.py  _skill.py  _version.py
