[project]
name = "hyspec-cli"
version = "0.0.1"
description = "HYspec — Spec-Driven Development CLI (learning edition)."
requires-python = ">=3.11"
dependencies = [
    "typer>=0.24.0",
]

[project.scripts]
hyspec = "hyspec_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hyspec_cli"]
