# 프로그램 설명서 (이름, 버전, 뭐가 필요한지)
[project]
name = "hyspec-cli"          # 프로그램 이름
version = "0.0.1"            # 버전 번호
description = "HYspec — Spec-Driven Development CLI (learning edition)."
requires-python = ">=3.11"   # Python 3.11 이상 써야 해요
dependencies = [
    "typer>=0.24.0",         # 명령 만들 때 쓰는 도구
]

# 터미널에 hyspec 치면 → hyspec_cli의 main() 실행
[project.scripts]
hyspec = "hyspec_cli:main"

# 설치할 때 패키지를 만드는 도구
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# 코드가 들어 있는 폴더
[tool.hatch.build.targets.wheel]
packages = ["src/hyspec_cli"]
